--- a/preprocess_brown_svm_01.ipynb
+++ b/preprocess_brown_svm_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -11,15 +11,15 @@
     "import re\n",
     "import nltk\n",
     "\n",
-    "data_folder=\"Datasets_SVM/Brown_Corpus/sample/data/\";\n",
-    "output_folder=\"Datasets_SVM/Brown_Corpus/sample/\";\n",
-    "#data_folder=\"Datasets_SVM/Brown_Corpus/brown/data/\";\n",
-    "#output_folder=\"Datasets_SVM/Brown_Corpus/brown/\";"
+    "data_folder=\"Datasets_SVM_01/Brown_Corpus/sample/data/\";\n",
+    "output_folder=\"Datasets_SVM_01/Brown_Corpus/sample/\";\n",
+    "#data_folder=\"Datasets_SVM_01/Brown_Corpus/brown/data/\";\n",
+    "#output_folder=\"Datasets_SVM_01/Brown_Corpus/brown/\";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,37 +125,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tag_to_id={};\n",
+    "id_to_tag={};\n",
+    "num_of_tags=0;\n",
+    "\n",
+    "with open(output_folder+'tags.txt') as infile:\n",
+    "    for linee in infile:\n",
+    "        if len(linee)>0:\n",
+    "            linee=linee.rstrip('\\n');\n",
+    "            num_of_tags=num_of_tags+1;\n",
+    "            tag_to_id[linee]=num_of_tags;\n",
+    "            id_to_tag[num_of_tags]=linee;\n",
+    "\n",
+    "#print(num_of_tags)\n",
+    "#print(tag_to_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_X=[];\n",
+    "train_Y=[];\n",
+    "\n",
+    "with open(output_folder+'train2.txt') as infile:\n",
+    "    for linee in infile:\n",
+    "        linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
+    "        for i in range(len(linee)):\n",
+    "            featt=getFeaturesAll_01(linee,i);\n",
+    "            tagg=linee[i][1];\n",
+    "            id=tag_to_id[tagg];\n",
+    "            train_Y.append(int(id));\n",
+    "            train_X.append(featt);\n",
+    "\n",
+    "#print(train_X)\n",
+    "#print(train_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_X=[];\n",
+    "test_Y=[];\n",
+    "\n",
+    "with open(output_folder+'test2.txt') as infile:\n",
+    "    for linee in infile:\n",
+    "        linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
+    "        for i in range(len(linee)):\n",
+    "            featt=getFeaturesAll_01(linee,i);\n",
+    "            tagg=linee[i][1];\n",
+    "            id=tag_to_id[tagg];\n",
+    "            test_Y.append(int(id));\n",
+    "            test_X.append(featt);\n",
+    "\n",
+    "#print(test_X)\n",
+    "#print(test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import svm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = svm.SVC(decision_function_shape='ovo');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n  decision_function_shape='ovo', degree=3, gamma='auto', kernel='rbf',\n  max_iter=-1, probability=False, random_state=None, shrinking=True,\n  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(train_X, train_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted=clf.predict(test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(output_folder+'test4_03.ids','w') as outfile:\n",
+    "    for elem in predicted:\n",
+    "        outfile.write(str(elem)+\"\\n\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(output_folder+'test4_00.ids','w') as outfile:\n",
+    "    for elem in test_Y:\n",
+    "        outfile.write(str(elem)+\"\\n\");"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_countt=0;\n",
-    "word_countt=0;\n",
-    "tempp='';\n",
-    "with open(output_folder+'train3.txt','w') as outfile:\n",
-    "    with open(output_folder+'train2.txt') as infile:\n",
-    "        for linee in infile:\n",
-    "            line_countt=line_countt+1;\n",
-    "            #print(str(line_countt)+linee)\n",
-    "            word_countt=0;\n",
-    "            linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
-    "            for i in range(len(linee)):\n",
-    "                word_countt=word_countt+1;\n",
-    "                featt=getFeaturesAll_01(linee,i);\n",
-    "                tempp=tempp+str(linee[i][1])+\"\\t\";\n",
-    "                for j in range(len(featt)):\n",
-    "                    tempp=tempp+str(j+1)+\"=\"+str(featt[j])+\"\\t\";\n",
-    "                if(i==0):\n",
-    "                    tempp=tempp+\"__BOS__\";\n",
-    "                if(i==len(linee)-1):\n",
-    "                    tempp=tempp+\"__EOS__\\n\";\n",
-    "                tempp=tempp.rstrip('\\t');\n",
-    "                tempp=tempp+\"\\n\";\n",
-    "            if((line_countt%100)==0):\n",
-    "                outfile.write(tempp);\n",
-    "                tempp='';\n",
-    "    #tempp=tempp.rstrip(\"\\n\");\n",
-    "    outfile.write(tempp);"
+    ""
    ]
   }
  ],
