--- a/preprocess_brown_crf.ipynb
+++ b/preprocess_brown_crf.ipynb
@@ -2,12 +2,191 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "\n",
+    "data_folder=\"Datasets_CRF/Brown_Corpus/sample/data/\";\n",
+    "output_folder=\"Datasets_CRF/Brown_Corpus/sample/\";\n",
+    "#data_folder=\"Datasets_CRF/Brown_Corpus/brown/data/\";\n",
+    "#output_folder=\"Datasets_CRF/Brown_Corpus/brown/\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isMixed(token):\n",
+    "    return (any([ch.isalnum() for ch in token]) and any([not ch.isalnum() for ch in token]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getFeaturesOne(linee,pos):\n",
+    "    lenn=len(linee);\n",
+    "    ret=[];\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        tokenn='';\n",
+    "    else:\n",
+    "        tokenn=linee[pos][0];\n",
+    "#1\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(len(tokenn));\n",
+    "#2\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(any([ch.isdigit() for ch in tokenn])));\n",
+    "#3\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.isupper()));\n",
+    "#4\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.istitle()));\n",
+    "#5\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(isMixed(tokenn)));\n",
+    "#6\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.isalpha()));\n",
+    "#7\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.islower()));\n",
+    "#8\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.isdigit()));\n",
+    "#9\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.isnumeric()));\n",
+    "#10\n",
+    "    if(pos<0 or pos>=lenn):\n",
+    "        ret.append(0);\n",
+    "    else:\n",
+    "        ret.append(int(tokenn.endswith(\"ing\")));\n",
+    "\n",
+    "\n",
+    "    return ret;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getFeaturesAll(linee,pos):\n",
+    "    ret=[];\n",
+    "    ret=ret+getFeaturesOne(linee,pos-1);\n",
+    "    ret=ret+getFeaturesOne(linee,pos);\n",
+    "    ret=ret+getFeaturesOne(linee,pos+1);\n",
+    "    return ret;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_countt=0;\n",
+    "word_countt=0;\n",
+    "tempp='';\n",
+    "with open(output_folder+'train3.txt','w') as outfile:\n",
+    "    with open(output_folder+'train2.txt') as infile:\n",
+    "        for linee in infile:\n",
+    "            line_countt=line_countt+1;\n",
+    "            #print(str(line_countt)+linee)\n",
+    "            word_countt=0;\n",
+    "            linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
+    "            for i in range(len(linee)):\n",
+    "                word_countt=word_countt+1;\n",
+    "                featt=getFeaturesAll(linee,i);\n",
+    "                tempp=tempp+str(linee[i][1])+\"\\t\";\n",
+    "                for j in range(len(featt)):\n",
+    "                    tempp=tempp+str(j+1)+\"=\"+str(featt[j])+\"\\t\";\n",
+    "                if(i==0):\n",
+    "                    tempp=tempp+\"__BOS__\";\n",
+    "                if(i==len(linee)-1):\n",
+    "                    tempp=tempp+\"__EOS__\\n\";\n",
+    "                tempp=tempp.rstrip('\\t');\n",
+    "                tempp=tempp+\"\\n\";\n",
+    "            if((line_countt%100)==0):\n",
+    "                outfile.write(tempp);\n",
+    "                tempp='';\n",
+    "    #tempp=tempp.rstrip(\"\\n\");\n",
+    "    outfile.write(tempp);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_countt=0;\n",
+    "word_countt=0;\n",
+    "tempp='';\n",
+    "with open(output_folder+'test3.txt','w') as outfile:\n",
+    "    with open(output_folder+'test2.txt') as infile:\n",
+    "        for linee in infile:\n",
+    "            line_countt=line_countt+1;\n",
+    "            #print(str(line_countt)+linee)\n",
+    "            word_countt=0;\n",
+    "            linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
+    "            for i in range(len(linee)):\n",
+    "                word_countt=word_countt+1;\n",
+    "                featt=getFeaturesAll(linee,i);\n",
+    "                tempp=tempp+str(linee[i][1])+\"\\t\";\n",
+    "                for j in range(len(featt)):\n",
+    "                    tempp=tempp+str(j+1)+\"=\"+str(featt[j])+\"\\t\";\n",
+    "                if(i==0):\n",
+    "                    tempp=tempp+\"__BOS__\";\n",
+    "                if(i==len(linee)-1):\n",
+    "                    tempp=tempp+\"__EOS__\\n\";\n",
+    "                tempp=tempp.rstrip('\\t');\n",
+    "                tempp=tempp+\"\\n\";\n",
+    "            if((line_countt%100)==0):\n",
+    "                outfile.write(tempp);\n",
+    "                tempp='';\n",
+    "    #tempp=tempp.rstrip(\"\\n\");\n",
+    "    outfile.write(tempp);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -19,7 +198,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
