--- a/process_structSVM_output_tags.ipynb
+++ b/process_structSVM_output_tags.ipynb
@@ -2,12 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "\n",
+    "folder=\"Outputs/\";\n",
+    "\n",
+    "tag_to_id={};\n",
+    "id_to_tag={};\n",
+    "num_of_tags=0;\n",
+    "\n",
+    "with open(folder+'tags.txt') as infile:\n",
+    "    for linee in infile:\n",
+    "        if len(linee)>0:\n",
+    "            linee=linee.rstrip('\\n');\n",
+    "            num_of_tags=num_of_tags+1;\n",
+    "            tag_to_id[linee]=num_of_tags;\n",
+    "            id_to_tag[num_of_tags]=linee;\n",
+    "\n",
+    "#print(num_of_tags)\n",
+    "#print(tag_to_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(folder+'test4_01.outtags') as infile:\n",
+    "    tempp=infile.read();\n",
+    "    tempp.rstrip('\\n');\n",
+    "    tempp=tempp.split(' ');\n",
+    "    tempp=list(filter(lambda x: x!='{' and x!='}' and x!='}{', tempp))\n",
+    "    with open(folder+\"test4_01.ids\",'w') as outfile:\n",
+    "        for elem in tempp:\n",
+    "            id=tag_to_id[elem];\n",
+    "            outfile.write(str(id)+\"\\n\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -19,7 +65,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
