--- a/tag_dictionary.ipynb
+++ b/tag_dictionary.ipynb
@@ -2,12 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import re\n",
+    "import nltk\n",
+    "\n",
+    "data_folder=\"Datasets/Brown_Corpus/sample/data/\";\n",
+    "output_folder=\"Datasets/Brown_Corpus/sample/\";\n",
+    "#data_folder=\"Datasets/Brown_Corpus/brown/data/\";\n",
+    "#output_folder=\"Datasets/Brown_Corpus/brown/\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tags=set();\n",
+    "with open(output_folder+'train2.txt') as infile:\n",
+    "    for linee in infile:\n",
+    "        linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
+    "        for i in range(len(linee)):\n",
+    "            tags.add(str(linee[i][1]));\n",
+    "\n",
+    "with open(output_folder+'test2.txt') as infile:\n",
+    "    for linee in infile:\n",
+    "        linee=[nltk.tag.str2tuple(t) for t in linee.split()];\n",
+    "        for i in range(len(linee)):\n",
+    "            tags.add(str(linee[i][1]));\n",
+    "\n",
+    "with open(output_folder+'tags.txt','w') as outfile:\n",
+    "    for elem in tags:\n",
+    "        outfile.write(str(elem)+\"\\n\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -19,7 +60,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
